--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".QuizActivity">
+    tools:context=".controller.QuizActivity">
 
     <TextView
         android:id="@+id/question_text"
