--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -11,7 +11,6 @@
         android:id="@+id/question_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/quiz_question"
         android:textSize="18sp" />
 
     <LinearLayout
@@ -33,4 +32,11 @@
             android:layout_weight="1"
             android:text="@string/false_btn_content" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/next_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_btn_content" />
+
 </LinearLayout>
