--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -33,10 +33,25 @@
             android:text="@string/false_btn_content" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/next_btn"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/next_btn_content" />
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/previous_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/keyboard_left_arrow_button"
+            android:contentDescription="@string/previous_btn_content"/>
+
+        <ImageButton
+            android:id="@+id/next_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/keyboard_right_arrow_button"
+            android:contentDescription="@string/next_btn_content"/>
+
+    </LinearLayout>
 
 </LinearLayout>
